src/components/FeedbackSection/FeedbackSection.module.scss
@use "@/styles/variables" as *;

.feedbackSection {
  width: 100%;
  max-width: 1228px;
  padding: 60px 104px;
  border-radius: 50px;
  box-shadow: 0 8px 15px 0 rgba(0, 0, 0, 0.5);
  background: radial-gradient(
    371.89% 134.33% at 3.21% 1.26%,
    rgba(251, 192, 0, 0.07) 0%,
    rgba(251, 192, 0, 0) 100%
  );
  color: $white-color;
  border: 1px solid rgb(96, 80, 28);
  position: relative;
  overflow: hidden;
}

.feedbackArrow {
  width: 71px;
  height: 53px;
  background-image: image-set(
    url(../../assets/images/sections/feedback/arrow-desc-1x.png) 1x,
    url(../../assets/images/sections/feedback/arrow-desc-2x.png) 2x
  );
  background-repeat: no-repeat;
  background-size: cover;
  position: absolute;
  top: 65px;
  left: 160px;
}

.feedbackTitle {
  text-align: center;
  font-weight: 400;
  font-size: 1.875rem;
}

.feedbackContent {
  display: flex;
}

.feedbackImgContainer {
  background-image: image-set(
    url(../../assets/images/sections/feedback/circles-desc-1x.png) 1x,
    url(../../assets/images/sections/feedback/circles-desc-2x.png) 2x
  );
  background-repeat: no-repeat;
  background-size: contain;
  background-position-x: right;
  width: 680px;
  height: 480px;
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  right: 42px;
}

.feedbackImgContainer img {
  width: 100%;
  position: absolute;
  top: -168px;
  left: 96px;
}

@media (max-width: $breakpoint-tablet) {
  .feedbackSection {
    padding: 60px 60px;
  }

  .feedbackArrow {
    top: 5dvh;
    left: 10dvw;
  }

  .feedbackImgContainer {
    right: -6dvw;
  }
}

